# smithay-ec

./: Cargo.toml
smallvil-ecs/: Cargo.toml
smallvil-ecs/src/: main.rs
src/: lib.rs
src/compositor/: dispatch.rs  mod.rs
src/shm/: mod.rs
src/xdg_shell/: dispatch.rs  mod.rs
