[workspace]
members = [
    "smallvil-ecs"
]

[package]
name = "smithay-ecs"
version = "0.1.0"
edition = "2021"

[dependencies.hecs]
version = "0.9.1"
features = ["std", "macros"]

[dependencies]
wayland-backend = "0.1.1"
wayland-server = "0.30.0"
wayland-scanner = "0.30.0"
hecs-hierarchy = "0.11.7"

[dependencies.wayland-protocols]
version = "0.30.0"
features = [ "server" ]

[dependencies.wayland-protocols-wlr]
version = "0.1.0"
features = [ "server" ]

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "f62864440c38a1756a1a115dc0dea25b27cc13e8"
default-features = false
features = [
    "backend_winit",
    "backend_egl",
    "backend_drm",
    "backend_gbm",
    "renderer_gl",
    "renderer_glow",
]

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
